<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:adjustViewBounds="true"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/content_description_logo"
                android:src="@mipmap/ic_logo" />
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/comicsToolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                app:layout_collapseMode="pin" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/comicsImage"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:src="@mipmap/ic_image_not_available"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/comicsPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_comics_price"
                        style="@style/detailTile" />
                    <TextView
                        android:id="@+id/comicsTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="160dp"
                        android:text="@string/txt_detail_name"
                        android:lines="2"
                        style="@style/detailTile" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </com.google.android.material.appbar.AppBarLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>