<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.comics.ComicsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <include layout="@layout/app_bar_comics" />
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/comicsImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_image_not_available"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY" />
                <TextView
                    android:id="@+id/comicsDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:text="@string/detail_description"
                    android:textColor="@color/colorItemText"
                    android:textSize="16sp" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="155dp"
            android:layout_marginTop="60dp"
            android:layout_marginRight="10dp"
            android:padding="5dp"
            android:orientation="vertical"
            android:layout_alignParentRight="true"
            android:background="@drawable/box">
            <ImageView
                android:id="@+id/characterImg"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:contentDescription="@string/content_description_logo"
                android:src="@mipmap/ic_image_not_available" />
            <TextView
                android:id="@+id/characterName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/txt_character_name"
                style="@style/detailText" />
        </LinearLayout>
    </RelativeLayout>

    <br.com.desafioandroidclaudiomonteoliva.view.components.Progress
        android:id="@+id/progressCom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

</FrameLayout>